--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
  <meta name="description" content="Yongle Coin ($YLC) — inspired by ancient fortune coins. Fair launch on pump.fun. Built on Solana." />
 
  <style>
-   body {     margin: 0;
-     font-family: "Georgia", serif;
+   body {     margin: 0;     font-family: "Georgia", serif;
      background: radial-gradient(circle at top, #1a1a1a, #000);
      color: #f5f5f5;
    }
