--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@
    <p><em>Ancient fortune. Modern crypto.</em></p>
 
    <p>
-     Inspired by the legendary Yongle Tongbao —  
+ <img
+
+     src="coin.png" alt="Yongle Coin"
+style="
+ width:220px;
+ margin:30px auto;
+ display:block;
+ filter: drop-shadow(0 0 25px rgba(212,175,55,0.7));
+"/>     Inspired by the legendary Yongle Tongbao —  
      a symbol of prosperity, balance, and timeless value.
    </p>
 
