--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
      background: radial-gradient(circle at top, #1a1a1a, #000);
      color: #f5f5f5;
    }
-   a {
-     color: #d4af37;
+   a {     color: #d4af37;
      text-decoration: none;
    }
    .container {
