--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@ style="
  width:220px;
  margin:30px auto;
  display:block;
- filter: drop-shadow(0 0 25px rgba(212,175,55,0.7));
-"/>     Inspired by the legendary Yongle Tongbao —  
+ filter: drop-shadow(0 0 25px rgba(212,175,55,0.7));"/>     Inspired by the legendary Yongle Tongbao —  
      a symbol of prosperity, balance, and timeless value.
    </p>
 
