--- a/index.html
+++ b/index.html
@@ -72,14 +72,10 @@
    <p><em>Ancient fortune. Modern crypto.</em></p>
 
    <p>
- <img
-
-     src="coin.png" alt="Yongle Coin"
-style="
- width:220px;
- margin:30px auto;
- display:block;
- filter: drop-shadow(0 0 25px rgba(212,175,55,0.7));"/>     Inspired by the legendary Yongle Tongbao —  
+<img src="coin.png" alt="Yongle Coin"
+style="max-width:280px; margin:40px auto; display:block;
+border-radius:50%;
+box-shadow:0 0 30px rgba(212,175,55,0.6);">Inspired by the legendary Yongle Tongbao —  
      a symbol of prosperity, balance, and timeless value.
    </p>
 
