--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
      font-size: 14px;
      opacity: 0.6;
    }
- </style>
+ @media (max-width: 600px) {
+ h1 {
+   font-size: 36px;
+ }
+ img {
+   max-width: 220px !important;
+ }
+}
+  </style>
 </head>
 
 <body>
